// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingCurrentSubscription component should render active 1`] = `
<div
  className="mb-4"
>
  <h5>
    <span>
      Your current subscription started on 
      <strong>
        Oct 10 2017
      </strong>
      .
    </span>
  </h5>
</div>
`;

exports[`BillingCurrentSubscription component should render empty 1`] = `null`;

exports[`BillingCurrentSubscription component should render trialing 1`] = `
<div
  className="mb-4"
>
  <h5>
    <span>
      Your current subscription started on 
      <strong>
        Oct 10 2017
      </strong>
      .
    </span>
    <span>
       Your free trial final day is on 
      <strong>
        Nov 10
      </strong>
      .
    </span>
  </h5>
</div>
`;
